style.css
@import url('https://fonts.googleapis.com/css2?family=Gloock&family=Lato:wght@300&family=Oswald:wght@300&family=Playfair+Display&display=swap');

*{
    margin: 20 ;
    padding: 20;
    border: none;}

    
/* index styling*/

body{
    font-family: Lato, sans-serif;
    font-weight: 200;
    color: #303031 ;
}

        /* headings and image*/

#buenos-aires{

    font-size: 50px;
    color: #4b6eac;
    letter-spacing:2px;
    font-family: Playfair Display, serif;
    text-transform:capitalize;
    font-weight: 200;
    float: left;
    margin-left: 30PX;
    line-height: 75px;
    

}

h1, h2 {
    font-size: 50px;
    color: #4b6eac;
    font-family: PlayFair Display,serif;
    font-weight: 200;
    letter-spacing: 3px;

}

h3{
    color: #4b6eac;
    font-family: PlayFair Display,serif;
    font-size: 25px;
    font-weight: 200;
    text-align: center;
    
}

p{
    color: #303031;
    font-family: Lato, sans-serif;
    font-size: 20px;
    font-weight: 200;
    text-align: center;
    line-height: 20px;
    text-align: center;

    

}


#menu {
    display: inline;
    letter-spacing: 2px;
    font-size: 110%;
    color:#4b6eac;
    line-height: 75px;
    font-family: PlayFair Display, sans-serif;
    font-weight: 400;
   
}
#menu li {
    float: right;
    list-style-type: none;
    margin-right: 30px;}

#menu a {
        text-decoration: none;
        color: inherit;
    }
    
#menu a:hover {
        border-bottom: 2px solid #2f4872;}


    /*menu image*/

#main-image{
height: 600px;
width: 100%;
background-image: url(./caminito.webp);
background-repeat: no-repeat;
background-position: center;

}

#main-image-outer{
    height: 600px;
    width: 100%;
    overflow: hidden;
    position: relative;
animation-name: main-zoom;
animation-duration: 5s;
animation-fill-mode:backwards;

}

@keyframes main-zoom{
    from{ 
        transform: scale(1);

    }
    to{transform: scale(1.1);

    }
}

#cover-text, #cover-text h2 {
    color: rgb(255, 252, 216);

}
#cover-text h3{
    color: rgb(255, 252, 216);
}

#cover-text {
    font-size: 130%;
    font-family: Lato, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    text-align: center;
    margin: 0 auto  

    width: 500px;
    height: 300px;
    padding-top: 40px;
    padding-left: 10px;

    background-color: #3030317e;

    bottom: 40px;
    right: 50px;

    position: absolute
}




.media{
    text-align: center;
}
.media>li{
    display: inline;
    color: #4b6eac;
}
.media i{
font-size: 200%;
margin: 2%;
padding: 5%;
color: #4b6eac
}

.right-about{
    padding-top: 40px;
    width: 45%;
    float: right;
    margin-right: 40px;
   
}

.left-about{
    padding-top: 40px;
    width: 45%;
    float: left;
    margin-left: 40px;
   
    
}

/*city styling*/
#menu-city{
    font-family: PlayFair Display,serif;
    letter-spacing: 2px;
    color: #303031 ;
    list-style-type: circle gold;


}

h2
p{
    font-family: Play Fair Display, sans-serif;
    font-size: 21px;
    letter-spacing: 2px;
    text-align:center;
}

/*culture styling*/

/*food styling*/

/*newsletter styling*/
.form-section {
    clear: left;
    background-size: cover;
    background-position: center;
    height: 900px;
}
.signup-form{
    margin: 150px 10% 0 0;
    color: #fff;
    background-color:rgba(60, 60, 60, 0.6);
    max-width:400px;
    position:absolute; left:10%;
    padding:30px;
}
.signup-form h2{ 
    color: #fafafa;
    margin-bottom:20px;
}

.text-input{
    background:transparent;
    color:#fafafa;
    width:100%;
    height:25px;
    margin: 5px 0 20px 0;
    border:1px solid #fafafa;
    border-radius: 2px;
}
.text-input:hover { 
    border-color:#6b93f1;
}
.join-button {
    
    margin-top:20px;
    border-radius:2px;
    padding:15px 32px 15px 32px;
    text-align:center;
    font-size:100%;
    background-color: #6b93f1;
    color:#fafafa;
    display:block;
}
.join-button:hover {
    background-color:#fafafa;
    color:#6b93f1;

}

